# spotify-github-profile

./: .firebaserc  .gitignore  README.md  index.py  pyproject.toml  requirements.txt  vercel.json
api/: app.py  callback.py  login.py  view.py
functions_backup/: app.py  callback.py  main.py  requirements.txt
util/: profanity.py  spotify.py
